--- a/app/views/coleta/_coleta_anual_enlaces_proprios.html.erb
+++ b/app/views/coleta/_coleta_anual_enlaces_proprios.html.erb
@@ -34,7 +34,7 @@
                       </div>
                        <div class="col-md-6">
                           <p><%= f.label :enlaceMeio, "Enlace Meio", class: "form-label" %></p>
-                          <p><%= f.select :enlaceMeio, options_for_select([['escolher', 'Escolher...'],['cabo_metalico', 'cabo_metálico'], ['radio', 'Rádio'], ['fibra', 'Fibra']])</p>
+                          <p><%= f.select :enlaceMeio, options_for_select([['escolher', 'Escolher...'],['cabo_metalico', 'cabo_metálico'], ['radio', 'Rádio'], ['fibra', 'Fibra']]) %></p>
                         </div>
                     </div>
 
@@ -45,7 +45,7 @@
                       </div>
                        <div class="col-md-6">
                           <p><%= f.label :enlaceSwap, "Enlace Swap", class: "form-label" %></p>
-                          <p><%= f.select :enlaceSwap, options_for_select([['escolher', 'Escolher...'],['s', 'S(SIM)'], ['n', 'N(NÃO)']])</p>
+                          <p><%= f.select :enlaceSwap, options_for_select([['escolher', 'Escolher...'],['s', 'S(SIM)'], ['n', 'N(NÃO)']]) %></p>
                         </div>
                     </div>
 
