--- a/app/views/coleta/_coleta_anual_enlaces_proprios.html.erb
+++ b/app/views/coleta/_coleta_anual_enlaces_proprios.html.erb
@@ -1,6 +1,6 @@
 <div class="card-body">
               <%= form_for @coleta, url: coleta_anualatualizar_path do |f| %>
-                   <%= f.hidden_field :id_coleta, :value => @coleta.id %>
+                   <%= f.hidden_field :id, :value => @coleta.id %>
 
                     <div class="box-title"><%= @coleta.tipoColeta %></div>
                        <div class="box-description">Coleta de dados de acessos:
