--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -3,7 +3,8 @@
 <% else %>
 
 <div class="container">
-   
+   <h2><strong><%= @organizacao.nome %></strong></h2><br/>
+
         <div class="row justify-content-center">
             <div class="col-md-4">
                 <div class="custom-box">
