--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -1,3 +1,4 @@
+
 <% if  @coletas.nil? %>
   <h2>Não há coletas para este cliente! </h2>
 <% else %>
@@ -5,7 +6,10 @@
 <div class="container">
    <h2><strong><%= @organizacao.nome %></strong></h2><br/>
 
-        
+       <div class="row justify-content-center">
+            
+            
+       
     
 
 <div class="container mt-5">
