--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -43,15 +43,7 @@
                           <td><a href="/coleta/anualfazer?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Fazer coleta</a> </td>
                         <% end %>
                     <% else %>
-                        <% if coleta.tituloColeta == 'Coleta Mensal' %>
-                          <td><a href="/coleta/mensalvisualizar?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Ver coleta</a> </td>
-                        <% end %>
-                        <% if coleta.tituloColeta == 'Coleta Semestral' %>
-                          <td><a href="/coleta/semestralvisualizar?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Ver coleta</a> </td>
-                        <% end %>
-                        <% if coleta.tituloColeta == 'Coleta Anual' %>
-                          <td><a href="/coleta/anualvisualizar?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Ver coleta</a> </td>
-                        <% end %>
+                        <td>Enviada para o Analista</td>
                     <% end %>
                 </tr>
                 <% end %>
