--- a/app/views/coleta/_coleta_anual_estacao.html.erb
+++ b/app/views/coleta/_coleta_anual_estacao.html.erb
@@ -34,7 +34,7 @@
                       </div>
                        <div class="col-md-6">
                           <p><%= f.label :abertura, "Abertura", class: "form-label" %></p>
-                          <p><%= f.select :abertura, options_for_select([['s', 'S(SIM)'], ['n', 'N(NÃO)']])</p>
+                          <p><%= f.select :abertura, options_for_select([['s', 'S(SIM)'], ['n', 'N(NÃO)']]) %></p>
                         </div>
                     </div>
 
