--- a/app/views/coleta/anualcriar.html.erb
+++ b/app/views/coleta/anualcriar.html.erb
@@ -24,7 +24,7 @@
          
               <%= form_for @coleta, url: coleta_anualinserir_path do |f| %>
               <%= f.hidden_field :id_projeto, :value => @projeto.id %>
-              <%= f.hidden_field :tipoColeta, :value => "enlacesProprio" %>
+              <%= f.hidden_field :tipoColeta, :value => "enlacesProprios" %>
                     <div class="box-title">Enlaces Próprios</div>
                     <div class="box-description">Coleta de dados Econômicos-financeiros e Técnico-operacionais
                     <p> <%= f.select :mes, [['Janeiro', 1], ['Fevereiro', 2], ['Março', 3], ['Abril', 4],  ['Maio', 5],  ['Junho', 6],  ['Julho', 7],  ['Agosto', 8],  ['Setembro', 9],  ['Outubro', 10],  ['Novembro', 11],  ['Dezembro', 12] ], class: "selecao" %></p>
@@ -40,7 +40,7 @@
           
            <%= form_for @coleta, url: coleta_anualinserir_path do |f| %>
               <%= f.hidden_field :id_projeto, :value => @projeto.id %>
-              <%= f.hidden_field :tipoColeta, :value => "enlacesContratados" %>
+              <%= f.hidden_field :tipoColeta, :value => "encalcesContratados" %>
                     <div class="box-title">Encalces Contratados</div>
                     <div class="box-description">Coleta de dados de Infraestrutura de Transporte
                     <p> <%= f.select :mes, [['Janeiro', 1], ['Fevereiro', 2], ['Março', 3], ['Abril', 4],  ['Maio', 5],  ['Junho', 6],  ['Julho', 7],  ['Agosto', 8],  ['Setembro', 9],  ['Outubro', 10],  ['Novembro', 11],  ['Dezembro', 12] ], class: "selecao" %></p>
