--- a/app/views/coleta/anualfazer.html.erb
+++ b/app/views/coleta/anualfazer.html.erb
@@ -1,5 +1,5 @@
 
-        <% if @coleta.tipoColeta == 'enlacesProprio' %>
+        <% if @coleta.tipoColeta == 'enlacesProprios' %>
           <%= render "coleta/coleta_anual_enlaces_proprios" %>
         <% end %>
         
