--- a/app/views/coleta/anualinformar.html.erb
+++ b/app/views/coleta/anualinformar.html.erb
@@ -5,7 +5,7 @@
   <%= render "coleta/coleta_anual_estacao" %>
 <% end %>
 
-<% if @coleta.tipoColeta == 'enlacesProprio' %>
+<% if @coleta.tipoColeta == 'enlacesProprios' %>
   <%= render "coleta/coleta_anual_enlaces_proprios" %>
 <% end %>
 
