--- a/app/views/coleta/_coleta_anual_encalces_contratados.html.erb
+++ b/app/views/coleta/_coleta_anual_encalces_contratados.html.erb
@@ -34,7 +34,7 @@
                       </div>
                        <div class="col-md-6">
                           <p><%= f.label :enlaceMeio, "Enlace Meio", class: "form-label" %></p>
-                          <p><%= f.select :enlaceMeio, options_for_select([['escolher', 'Escolher...'],['cabo_metalico', 'cabo_metálico'], ['radio', 'Rádio'], ['fibra', 'Fibra']])</p>
+                          <p><%= f.select :enlaceMeio, options_for_select([['escolher', 'Escolher...'],['cabo_metalico', 'cabo_metálico'], ['radio', 'Rádio'], ['fibra', 'Fibra']]) %></p>
                         </div>
                     </div>
 
