--- a/app/views/coleta/_coleta_anual_encalces_via_satelite.html.erb
+++ b/app/views/coleta/_coleta_anual_encalces_via_satelite.html.erb
@@ -7,8 +7,8 @@
                          
                        <div class="row mb-3">
                          <div class="col-md-6">
-                              <p><%= f.label :cnpj, "CNPJ", class: "form-label" %></p>
-                               <p><%= f.text_field :cnpj, class: "form-control", id: "cnpj", placeholder: "Digite o CNPJ da Prestadora" %></p>
+                              <p><%= f.label :cnpjPrestadora, "CNPJ", class: "form-label" %></p>
+                               <p><%= f.text_field :cnpjPrestadora, class: "form-control", id: "cnpj", placeholder: "Digite o CNPJ da Prestadora" %></p>
                          </div>
                          <div class="col-md-6">
                                <p><%= f.label :ano, "Ano", class: "form-label" %></p>
@@ -18,8 +18,19 @@
 
                       <div class="row mb-3">
                         <div class="col-md-6">
+                          <p><%= f.label :idEstacaoOrigem, "Id da Estação de Origem", class: "form-label" %></p>
+                          <p><%= f.text_field :idEstacaoOrigem, class: "form-control", id: "idEstacaoOrigem", placeholder: "Id da Estação de Origem" %></p>
+                        </div>
+                        <div class="col-md-6">
                           <p><%= f.label :idSatelite, "Id Satélite", class: "form-label" %></p>
                           <p><%= f.text_field :idSatelite, class: "form-control", id: "idSatelite", placeholder: "Id Satélite" %></p>
+                        </div>
+                       </div>
+
+                      <div class="row mb-3">
+                        <div class="col-md-6">
+                          <p><%= f.label :codigoSatelite, "Código do Satélite", class: "form-label" %></p>
+                          <p><%= f.text_field :codigoSatelite, class: "form-control", id: "codigoSatelite", placeholder: "Código do Satélite" %></p>
                         </div>
                         <div class="col-md-6">
                           <p><%= f.label :freqUplink, "Frequência do Satélite uplink", class: "form-label" %></p>
@@ -29,8 +40,8 @@
 
                      <div class="row mb-3">
                       <div class="col-md-6">
-                         <p><%= f.label :freqDownlink, "Frequência do Satélite uplink", class: "form-label" %></p>
-                          <p><%= f.text_field :freqDownlink, class: "form-control", id: "freqDownlink", placeholder: "Frequência do Satélite uplink" %></p>
+                         <p><%= f.label :freqDownlink, "Frequência do Satélite Downlink", class: "form-label" %></p>
+                          <p><%= f.text_field :freqDownlink, class: "form-control", id: "freqDownlink", placeholder: "Frequência do Satélite Downlink" %></p>
                       </div>
                        <div class="col-md-6">
                           <p><%= f.label :largCanalUplink, "Largura do canal Uplink", class: "form-label" %></p>
@@ -51,8 +62,8 @@
 
                      <div class="row mb-3">
                       <div class="col-md-6">
-                         <p><%= f.label :capCanalDownlink, "Capacidade do Canal Uplink", class: "form-label" %></p>
-                         <p><%= f.text_field :capCanalDownlink, class: "form-control", id: "capCanalDownlink", placeholder: "Largura do canal downlink" %></p>
+                         <p><%= f.label :capCanalDownlink, "Capacidade do Canal Downlink", class: "form-label" %></p>
+                         <p><%= f.text_field :capCanalDownlink, class: "form-control", id: "capCanalDownlink", placeholder: "Capacidade do Canal Downlink" %></p>
                       </div>
                        
                     </div>
