--- a/app/views/coleta/_coleta_anual_enlaces_proprios.html.erb
+++ b/app/views/coleta/_coleta_anual_enlaces_proprios.html.erb
@@ -7,8 +7,8 @@
                          
                        <div class="row mb-3">
                          <div class="col-md-6">
-                              <p><%= f.label :cnpjPrestadora, "CNPJ", class: "form-label" %></p>
-                               <p><%= f.text_field :cnpjPrestadora, class: "form-control", id: "cnpj", placeholder: "Digite o CNPJ da Prestadora" %></p>
+                              <p><%= f.label :cnpj, "CNPJ da Prestadora", class: "form-label" %></p>
+                               <p><%= f.text_field :cnpj, class: "form-control", id: "cnpj", placeholder: "Digite o CNPJ da Prestadora" %></p>
                          </div>
                          <div class="col-md-6">
                                <p><%= f.label :ano, "Ano", class: "form-label" %></p>
