--- a/app/views/coleta/_coleta_anual_enlaces_proprios.html.erb
+++ b/app/views/coleta/_coleta_anual_enlaces_proprios.html.erb
@@ -56,7 +56,7 @@
                       </div>
                        <div class="col-md-6">
                           <p><%= f.label :srid, "SRID", class: "form-label" %></p>
-                          <p><%= f.text_field :srid, class: "form-control", srid: "SRID", placeholder: "SRID" %></p>
+                          <p><%= f.text_field :srid, class: "form-control", id: "srid", placeholder: "SRID" %></p>
                         </div>
                     </div>
 
