--- a/app/views/coleta/_coleta_anual_estacao.html.erb
+++ b/app/views/coleta/_coleta_anual_estacao.html.erb
@@ -55,7 +55,7 @@
                     <div class="row mb-3">
                       <div class="col-md-6">
                          <p><%= f.label :rua, "Rua", class: "form-label" %></p>
-                         <p><%= f.text_field :rua, class: "form-control", rua: "Rua", placeholder: "Cep" %></p>
+                         <p><%= f.text_field :rua, class: "form-control", rua: "Rua", placeholder: "Rua" %></p>
                       </div>
                        <div class="col-md-6">
                           <p><%= f.label :numeroEndereco, "Número", class: "form-label" %></p>
