--- a/app/views/coleta/_coleta_anual_enlaces_proprios.html.erb
+++ b/app/views/coleta/_coleta_anual_enlaces_proprios.html.erb
@@ -52,7 +52,7 @@
                     <div class="row mb-3">
                       <div class="col-md-6">
                          <p><%= f.label :geometriaWkt, "Geometria WKT", class: "form-label" %></p>
-                         <p><%= f.text_field :geometriaWkt, class: "form-control", geometriaWkt: "Geometria WKT", placeholder: "Cep" %></p>
+                         <p><%= f.text_field :geometriaWkt, class: "form-control", geometriaWkt: "Geometria WKT", placeholder: "Geometria WKT" %></p>
                       </div>
                        <div class="col-md-6">
                           <p><%= f.label :srid, "SRID", class: "form-label" %></p>
