--- a/app/views/coleta/_coleta_semestral_smp.html.erb
+++ b/app/views/coleta/_coleta_semestral_smp.html.erb
@@ -8,7 +8,7 @@
                        <div class="row mb-3">
                          <div class="col-md-6">
                               <p><%= f.label :cnpj, "Cnpj", class: "form-label" %></p>
-                               <p><%= f.text_field :cnpj, class: "form-control", id: "cnpj", placeholder: "Digite o CNPJ da Prestadora" %></p>
+                               <p><%= f.text_field :cnpj, class: "form-control", id: "cnpj", placeholder: "Digite o CNPJ da Prestadora", required: true %></p>
                          </div>
                          <div class="col-md-6">
                                <p><%= f.label :anoInformado, "Ano", class: "form-label" %></p>
