--- a/app/views/coleta/_coleta_anual_enlaces_proprios.html.erb
+++ b/app/views/coleta/_coleta_anual_enlaces_proprios.html.erb
@@ -8,55 +8,55 @@
                        <div class="row mb-3">
                          <div class="col-md-6">
                               <p><%= f.label :cnpj, "CNPJ da Prestadora", class: "form-label" %></p>
-                               <p><%= f.text_field :cnpj, class: "form-control", id: "cnpj", placeholder: "Digite o CNPJ da Prestadora" %></p>
+                               <p><%= f.text_field :cnpj, class: "form-control", id: "cnpj", placeholder: "Digite o CNPJ da Prestadora", required: true %></p>
                          </div>
                          <div class="col-md-6">
                                <p><%= f.label :ano, "Ano", class: "form-label" %></p>
-                               <p><%= f.text_field :ano, class: "form-control", id: "ano", placeholder: "Digite o ano" %></p>
+                               <p><%= f.text_field :ano, class: "form-control", id: "ano", placeholder: "Digite o ano", required: true %></p>
                          </div>
                        </div>
 
                       <div class="row mb-3">
                         <div class="col-md-6">
                           <p><%= f.label :idEstacaoOrigem, "Id da estação de origem", class: "form-label" %></p>
-                          <p><%= f.text_field :idEstacaoOrigem, class: "form-control", id: "idEstacaoOrigem", placeholder: "Id da Estação de Origem" %></p>
+                          <p><%= f.text_field :idEstacaoOrigem, class: "form-control", id: "idEstacaoOrigem", placeholder: "Id da Estação de Origem", required: true %></p>
                         </div>
                         <div class="col-md-6">
                           <p><%= f.label :idEstacaoDestino, "Id da estação de destino", class: "form-label" %></p>
-                          <p><%= f.text_field :idEstacaoDestino, class: "form-control", id: "idEstacaoDestino", placeholder: "Id da Estação de destino" %></p>
+                          <p><%= f.text_field :idEstacaoDestino, class: "form-control", id: "idEstacaoDestino", placeholder: "Id da Estação de destino", required: true %></p>
                         </div>
                       </div>
 
                      <div class="row mb-3">
                       <div class="col-md-6">
                          <p><%= f.label :idEnlace, "Id Enlace", class: "form-label" %></p>
-                         <p><%= f.text_field :idEnlace, class: "form-control", id: "idEnlace", placeholder: "Id Enlace" %></p>
+                         <p><%= f.text_field :idEnlace, class: "form-control", id: "idEnlace", placeholder: "Id Enlace", required: true %></p>
                       </div>
                        <div class="col-md-6">
                           <p><%= f.label :enlaceMeio, "Enlace Meio", class: "form-label" %></p>
-                          <p><%= f.select :enlaceMeio, options_for_select([['escolher', 'Escolher...'],['cabo_metalico', 'cabo_metálico'], ['radio', 'Rádio'], ['fibra', 'Fibra']]) %></p>
+                          <p><%= f.select :enlaceMeio, options_for_select([['escolher', 'Escolher...'],['cabo_metalico', 'cabo_metálico'], ['radio', 'Rádio'], ['fibra', 'Fibra']]), required: true %></p>
                         </div>
                     </div>
 
                     <div class="row mb-3">
                       <div class="col-md-6">
                          <p><%= f.label :enlaceNominal, "Enlace Nominal", class: "form-label" %></p>
-                         <p><%= f.text_field :enlaceNominal, class: "form-control", id: "enlaceNominal", placeholder: "Enlace Nominal" %></p>
+                         <p><%= f.text_field :enlaceNominal, class: "form-control", id: "enlaceNominal", placeholder: "Enlace Nominal", required: true %></p>
                       </div>
                        <div class="col-md-6">
                           <p><%= f.label :enlaceSwap, "Enlace Swap", class: "form-label" %></p>
-                          <p><%= f.select :enlaceSwap, options_for_select([['escolher', 'Escolher...'],['s', 'S(SIM)'], ['n', 'N(NÃO)']]) %></p>
+                          <p><%= f.select :enlaceSwap, options_for_select([['escolher', 'Escolher...'],['s', 'S(SIM)'], ['n', 'N(NÃO)']]), required: true %></p>
                         </div>
                     </div>
 
                     <div class="row mb-3">
                       <div class="col-md-6">
                          <p><%= f.label :geometriaWkt, "Geometria WKT", class: "form-label" %></p>
-                         <p><%= f.text_field :geometriaWkt, class: "form-control", geometriaWkt: "Geometria WKT", placeholder: "Geometria WKT" %></p>
+                         <p><%= f.text_field :geometriaWkt, class: "form-control", geometriaWkt: "Geometria WKT", placeholder: "Geometria WKT", required: true %></p>
                       </div>
                        <div class="col-md-6">
                           <p><%= f.label :srid, "SRID", class: "form-label" %></p>
-                          <p><%= f.text_field :srid, class: "form-control", id: "srid", placeholder: "SRID" %></p>
+                          <p><%= f.text_field :srid, class: "form-control", id: "srid", placeholder: "SRID", required: true %></p>
                         </div>
                     </div>
 
